--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -72,7 +72,7 @@
                   </p>
                   <p class="card-footer-item">
                     <span>
-                      Share <a target="_blank" href="../quiz-tju/responses/index.html">Responses</a>
+                      View <a target="_blank" href="../quiz-tju/responses/index.html">Responses</a>
                     </span>
                   </p>
                 </footer>
@@ -94,7 +94,7 @@
                   </p>
                   <p class="card-footer-item">
                     <span>
-                      Share <a target="_blank" href="../quiz-4jy/responses/index.html">Responses</a>
+                      View <a target="_blank" href="../quiz-4jy/responses/index.html">Responses</a>
                     </span>
                   </p>
                 </footer>
@@ -138,7 +138,7 @@
                   </p>
                   <p class="card-footer-item">
                     <span>
-                      Share <a target="_blank" href="../quiz-awj/responses/index.html">Responses</a>
+                      View <a target="_blank" href="../quiz-awj/responses/index.html">Responses</a>
                     </span>
                   </p>
                 </footer>
@@ -160,7 +160,7 @@
                   </p>
                   <p class="card-footer-item">
                     <span>
-                      Share <a target="_blank" href="../quiz-oef/responses/index.html">Responses</a>
+                      View <a target="_blank" href="../quiz-oef/responses/index.html">Responses</a>
                     </span>
                   </p>
                 </footer>
