--- a/public/quiz-avh/index.html
+++ b/public/quiz-avh/index.html
@@ -129,7 +129,7 @@
           
           <div class="field is-horizontal is-grouped">
             <div class="field-body">
-                <div class="field">
+                <!-- <div class="field">
                     <div class="control">
                       <div class="select is-medium is-fullwidth" :class="{ 'is-danger': errors.class.hasError }">
                         <select v-model="student.class">
@@ -141,7 +141,7 @@
                           {{ errors.class.message }}
                         </p>
                     </div>
-                  </div>
+                  </div> -->
               <div class="field">
                 <div class="control">
                   <div class="select is-medium is-fullwidth" :class="{ 'is-danger': errors.gender.hasError }">
