--- a/public/quiz-mi7/index.html
+++ b/public/quiz-mi7/index.html
@@ -131,7 +131,7 @@
             
             <div class="field is-horizontal is-grouped">
               <div class="field-body">
-                  <div class="field">
+                  <!-- <div class="field">
                       <div class="control">
                         <div class="select is-medium is-fullwidth" :class="{ 'is-danger': errors.class.hasError }">
                           <select v-model="student.class">
@@ -143,7 +143,7 @@
                             {{ errors.class.message }}
                           </p>
                       </div>
-                    </div>
+                    </div> -->
                 <div class="field">
                   <div class="control">
                     <div class="select is-medium is-fullwidth" :class="{ 'is-danger': errors.gender.hasError }">
