--- a/public/quiz-tju/index.html
+++ b/public/quiz-tju/index.html
@@ -128,7 +128,7 @@
           </h2>
           <div class="field is-horizontal is-grouped ">
             <div class="field-body">
-                <div class="field">
+                <!-- <div class="field">
                     <div class="control">
                       <div class="select is-medium is-fullwidth" :class="{ 'is-danger': errors.class.hasError }">
                         <select v-model="student.class">
@@ -140,7 +140,7 @@
                           {{ errors.class.message }}
                         </p>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="field">
                       <div class="control">
                         <div class="select is-medium is-fullwidth" :class="{ 'is-danger': errors.gender.hasError }">
