restructure confidential files

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -188,6 +188,8 @@
         </p>
       </div>
     </footer>
+    
+    <script type="text/javascript" src="../js/firebase-config.js"></script>
     <script type="text/javascript" src="../js/utility.js"></script>
     <script type="text/javascript" src="admin.js"></script>
   </body>
