--- a/public/quiz-mi7/index.html
+++ b/public/quiz-mi7/index.html
@@ -202,6 +202,7 @@
         </p>
       </div>
     </footer>
+    <script type="text/javascript" src="../js/firebase-config.js"></script>
     <script type="text/javascript" src="../js/utility.js"></script>
     <script type="text/javascript" src="quiz1.js"></script>
   </body>
