--- a/public/quiz-tju/index.html
+++ b/public/quiz-tju/index.html
@@ -204,6 +204,7 @@
         </p>
       </div>
     </footer>
+    <script type="text/javascript" src="../js/firebase-config.js"></script>
     <script type="text/javascript" src="../js/utility.js"></script>
     <script type="text/javascript" src="quiz2.js"></script>
   </body>
