--- a/public/send-results/index.html
+++ b/public/send-results/index.html
@@ -33,6 +33,7 @@
         </div>
     </div>
 </section>
+<script type="text/javascript" src="../js/firebase-config.js"></script>
 <script type="text/javascript" src="../js/utility.js"></script>
 <script src="main.js"></script>
 </body>
