--- a/public/quiz-4jy/index.html
+++ b/public/quiz-4jy/index.html
@@ -256,6 +256,7 @@
         </p>
       </div>
     </footer>
+    <script type="text/javascript" src="../js/firebase-config.js"></script>
     <script type="text/javascript" src="../js/utility.js"></script>
     <script type="text/javascript" src="quiz3.js"></script>
   </body>
