--- a/public/quiz-avh/index.html
+++ b/public/quiz-avh/index.html
@@ -205,6 +205,7 @@
         </p>
       </div>
     </footer>
+    <script type="text/javascript" src="../js/firebase-config.js"></script>
     <script type="text/javascript" src="../js/utility.js"></script>
     <script type="text/javascript" src="quiz4.js"></script>
   </body>
